# file-analyzer

./: .gitignore  Cargo.toml  README.md  clear_files.sh  join_all_files.sh  join_files.sh  task.md
files/joined/: 2.txt
files/raw/: 1.txt  2.txt
src/: lib.rs
src/analyzer/: mod.rs  sentence_count.rs  word_count.rs  word_search.rs
